fixed npm start in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1 ./app",
+    "start": "node app.js",
     "pretest": "npm install",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
